<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >
    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        >

    </ImageView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@mipmap/logokeystone"
                android:layout_marginTop="120dp">

            </ImageView>




            <LinearLayout android:id="@+id/menu_ll"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"

                android:layout_gravity="center"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <EditText
                        android:id="@+id/edt_user_id"
                        android:hint="@string/otp"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:padding="20dp"
                        android:layout_marginRight="20dp"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:drawableLeft="@mipmap/opt"
                        android:layout_height="wrap_content"
                        android:drawablePadding="20dp"
                        android:inputType="textEmailAddress"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <EditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@android:color/black"
                            android:padding="20dp"
                            android:inputType="textPassword"
                            android:drawablePadding="20dp"
                            android:drawableLeft="@mipmap/iconslock"
                            android:layout_marginRight="20dp"
                            android:layout_centerVertical="true"
                            android:hint="@string/passwordtext"
                            />

                        <ImageView
                            android:id="@+id/iv_eye"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/iconseye"
                            android:layout_marginRight="20dp"
                            android:padding="10dp"
                            />

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <EditText
                            android:id="@+id/edt_re_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@android:color/black"
                            android:padding="20dp"
                            android:inputType="textPassword"
                            android:drawablePadding="20dp"
                            android:drawableLeft="@mipmap/iconslock"
                            android:layout_marginRight="20dp"
                            android:layout_centerVertical="true"
                            android:hint="@string/confirm_password"
                            />

                        <ImageView
                            android:id="@+id/re_iv_eye"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/iconseye"
                            android:layout_marginRight="20dp"
                            android:padding="10dp"
                            />

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_login"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:background="@drawable/login_back">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:textSize="16dp"
                        android:textColor="@android:color/white"/>


                </RelativeLayout>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>
